<resources>
    <string name="app_name">EasyYoga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_connect_with">or connect with</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confrim password</string>
</resources>